--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-*.class
-*.log
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.metals
+.bloop
+.idea
+target
+.dotty-ide-disabled
+metals.sbt
+*.code-workspace
+.vscode
+*.sc
+.logs
+./logback.groovy
+test.env
+.bsp
+.scripts
+.local
+flyway.conf
+nohup.out
+.DS_Store
